--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+yishu/.settings/org.eclipse.wst.validation.prefs
+yishu/.settings/org.eclipse.wst.jsdt.ui.superType.name
+yishu/.settings/org.eclipse.wst.jsdt.ui.superType.container
+yishu/.settings/org.eclipse.wst.common.project.facet.core.xml
+yishu/.settings/org.eclipse.wst.common.component
+yishu/.settings/org.eclipse.m2e.core.prefs
+yishu/.settings/org.eclipse.jdt.core.prefs
+yishu/.settings/.jsdtscope
+yishu/.classpath
+yishu/.project
