--- a/yishu/src/main/resources/log4j.properties
+++ b/yishu/src/main/resources/log4j.properties
@@ -14,10 +14,10 @@ log4j.logger.java.sql.Statement=DEBUG
 log4j.logger.java.sql.PreparedStatement=DEBUG 
 
 #zookeeper off ping output
-log4j.logger.org.apache.zookeeper=OFF
+#log4j.logger.org.apache.zookeeper=OFF
 
 #dubbo off heartbeat output
-log4j.logger.com.alibaba.dubbo.remoting.exchange.support.header=OFF
+#log4j.logger.com.alibaba.dubbo.remoting.exchange.support.header=OFF
 
 #console 
 log4j.appender.console = org.apache.log4j.ConsoleAppender
@@ -26,7 +26,7 @@ log4j.appender.console.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss,SSS} [
 
 #infoR
 log4j.appender.infoR = org.apache.log4j.RollingFileAppender
-log4j.appender.infoR.File =${catalina.home}/logs/cta-web/info/info.txt
+log4j.appender.infoR.File =${catalina.home}/logs/yshu/info/info.txt
 log4j.appender.infoR.Threshold = INFO
 log4j.appender.infoR.MaxFileSize = 50MB
 log4j.appender.infoR.MaxBackupIndex = 1000
@@ -35,7 +35,7 @@ log4j.appender.infoR.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss,SSS} [%c]-
 
 #errorR
 log4j.appender.errorR = org.apache.log4j.RollingFileAppender
-log4j.appender.errorR.File =${catalina.home}/logs/cta-web/error/error.txt
+log4j.appender.errorR.File =${catalina.home}/logs/yshu/error/error.txt
 log4j.appender.errorR.Threshold = ERROR
 log4j.appender.errorR.MaxFileSize = 50MB
 log4j.appender.errorR.MaxBackupIndex = 1000
@@ -44,7 +44,7 @@ log4j.appender.errorR.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss,SSS} [%c]
 
 #allR
 log4j.appender.allR = org.apache.log4j.RollingFileAppender
-log4j.appender.allR.File =${catalina.home}/logs/cta-web/all/all.txt
+log4j.appender.allR.File =${catalina.home}/logs/yshu/all/all.txt
 log4j.appender.allR.MaxFileSize = 500MB
 log4j.appender.allR.MaxBackupIndex = 1000
 log4j.appender.allR.layout = org.apache.log4j.PatternLayout
@@ -53,7 +53,7 @@ log4j.appender.allR.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss,SSS} [%c]-[
 
 #debugR
 log4j.appender.debugR=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.debugR.File=${catalina.home}/logs/cta-web/debug/cta-web.txt
+log4j.appender.debugR.File=${catalina.home}/logs/yshu/debug/yshu.txt
 log4j.appender.debugR.MaxFileSize = 50MB
 log4j.appender.debugR.MaxBackupIndex = 1000
 log4j.appender.debugR.layout=org.apache.log4j.PatternLayout
