--- a/yishu/src/main/webapp/WEB-INF/web.xml
+++ b/yishu/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
 	id="WebApp_ID" version="2.4">
   
+  <!-- **************************** 基础配置  **************************** -->
   <servlet>
   	 <servlet-name>yshu</servlet-name>
 	 <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -17,6 +18,19 @@
   	 <url-pattern>/</url-pattern>
   </servlet-mapping>
   
+  <!-- **************************** log4j配置  **************************** -->
+  <!-- Log4j配置 -->
+  <context-param>
+	<param-name>log4jConfigLocation</param-name>
+	<param-value>classpath:/log4j.properties</param-value>
+  </context-param>
+  
+   <!--Spring log4j Config loader-->
+   <listener>
+      <listener-class> org.springframework.web.util.Log4jConfigListener</listener-class>
+   </listener>
+
+  <!-- **************************** 拦截器  **************************** -->
   <!-- 编码统一 -->
   <filter>
      <filter-name>encodingFilter</filter-name>
@@ -43,6 +57,7 @@
   	 <url-pattern>/*</url-pattern>
   </filter-mapping>
   
+   <!-- **************************** 错误页面  **************************** -->
    <!-- 出错页面定义   -->
 	<error-page>  
 	    <error-code>500</error-code>  
