1.spring集成mybatis配置 2.mybatis逆向工程代码添加

--- a/yishu/src/main/resources/config.properties
+++ b/yishu/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 
 ################################ \u6570\u636e\u5e93\u914d\u7f6e ##############################
+validationQuery=SELECT 1
 driverClassName=com.mysql.jdbc.Driver
 #\u6570\u636e\u5e93\u5730\u5740        
 jdbc_url=jdbc:mysql://localhost:3306/hotel?useSSL=false
