--- a/yishu/pom.xml
+++ b/yishu/pom.xml
@@ -26,6 +26,13 @@
 		 <artifactId>zookeeper</artifactId>
 		 <version>3.4.6</version>
  	 </dependency>
+ 	 
+ 	 <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+	<dependency>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>druid</artifactId>
+	    <version>1.1.5</version>
+	</dependency>
     
      <!-- mybatis -->
  	 <dependency>
@@ -33,7 +40,14 @@
 		 <artifactId>mybatis</artifactId>
 		 <version>3.2.7</version>
   	 </dependency>
-    
+  	 
+  	 <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis-spring</artifactId>
+	    <version>1.3.1</version>
+	</dependency>
+  	 
      <!-- 校验参数格式  -->
  	 <dependency>  
 	     <groupId>javax.validation</groupId>  
