1.统一编码格式utf-8 2.修改数据库名称 3.添加登录测试接口

--- a/yishu/src/main/resources/config.properties
+++ b/yishu/src/main/resources/config.properties
@@ -3,7 +3,7 @@
 validationQuery=SELECT 1
 driverClassName=com.mysql.jdbc.Driver
 #\u6570\u636e\u5e93\u5730\u5740        
-jdbc_url=jdbc:mysql://localhost:3306/hotel?useSSL=false
+jdbc_url=jdbc:mysql://localhost:3306/yshu?useSSL=false
 #\u6570\u636e\u5e93\u7528\u6237\u540d
 jdbc_username=root
 #\u6570\u636e\u5e93\u5bc6\u7801
