修改目录名称

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@ yishu/.settings/org.eclipse.jdt.core.prefs
 yishu/.settings/.jsdtscope
 yishu/.classpath
 yishu/.project
+yshu/.project
+yshu/.classpath
+yshu/.settings/org.eclipse.wst.validation.prefs
+yshu/.settings/org.eclipse.wst.jsdt.ui.superType.name
+yshu/.settings/org.eclipse.wst.jsdt.ui.superType.container
+yshu/.settings/org.eclipse.wst.common.project.facet.core.xml
+yshu/.settings/org.eclipse.wst.common.component
+yshu/.settings/org.eclipse.m2e.core.prefs
+yshu/.settings/org.eclipse.jdt.core.prefs
+yshu/.settings/.jsdtscope
