--- a/yshu/pom.xml
+++ b/yshu/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ytl.yshu</groupId>
-  <artifactId>yishu</artifactId>
+  <artifactId>yshu</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>yishu Maven Webapp</name>
+  <name>yshu Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
   <properties>
