--- a/yshu/pom.xml
+++ b/yshu/pom.xml
@@ -33,6 +33,13 @@
 	    <artifactId>druid</artifactId>
 	    <version>1.1.5</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.44</version>
+	</dependency>
     
      <!-- mybatis -->
  	 <dependency>
