1.添加注册接口 2.重新生成mybatis逆向代码 3.添加自定义异常 4.添加全局常量 5.添加工具类 6.优化并删除冗余代码

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ yshu/.settings/org.eclipse.wst.common.component
 yshu/.settings/org.eclipse.m2e.core.prefs
 yshu/.settings/org.eclipse.jdt.core.prefs
 yshu/.settings/.jsdtscope
+yshu/.settings/org.eclipse.core.resources.prefs
